trying to fix checkbox appearance on safari browser. Working on all other browsers.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Gluten:wght@100;200;300;400;500;600;700;800;900&family=Orbitron:wght@400;500;600;700;800;900&display=swap");
 
 /* Body Styles */
+* {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 body {
   font-family: "Gluten", Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
